[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 44.7579
margin_top = -175.423
margin_right = 271.758
margin_bottom = -22.4227
custom_fonts/font = SubResource( 1 )
text = "    El Coronavirus
  barde√≥ zarpado y 
hay que sobrevivir."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="."]
margin_left = 9.16458
margin_top = 656.297
margin_right = 131.165
margin_bottom = 705.297
rect_scale = Vector2( 0.975092, 0.975092 )
custom_fonts/font = SubResource( 1 )
text = "Salud"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 68.1151
margin_bottom = 88.1151
text = "Mandale mecha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
